--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -1,61 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%- title %></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="./assets/style/all.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>
+    <%- title %>
+  </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+  <link rel="stylesheet" href="./assets/style/all.css">
+  <link href="https://fonts.google.com/specimen/Lato" rel="stylesheet">
+  <link href="https://fonts.google.com/specimen/roboto+mono?query=robo" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+    rel="stylesheet">
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
+    <script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
+
+</head>
+
+<body>
+  <!-- 左側主選單 -->
+  <nav class="d-flex flex-column bg-light justify-content-between pt-6 pb-5">
+    <ul class="nav flex-column ">
+      <a class="logo mb-6 p-0 ms-5" aria-current="page" href="#">
+        <img src="./assets/images/logo-ANSWER.svg" alt="logo">
+      </a>
+      <li class="nav-item mb-4">
+        <a class="nav-link d-flex align-items-center" href="#">
+          <span class="material-icons me-3 ">
+            assessment
+          </span>
+          Dashboard
+        </a>
+      </li>
+      <li class="nav-item mb-4">
+        <a class="nav-link d-flex align-items-center" href="#">
+          <span class="material-icons me-3">
+            question_answer
+          </span>
+          Question
+        </a>
+      </li>
+      <li class="nav-item mb-4">
+        <a class="nav-link d-flex align-items-center" href="#">
+          <span class="material-icons me-3">
+            assignment
+          </span>
+          Assignment
+        </a>
+      </li>
+      <li class="nav-item mb-4">
+        <a class="nav-link d-flex align-items-center" href="#">
+          <span class="material-icons me-3">
+            video_library
+          </span>
+          Course
+        </a>
+      </li>
+      <li class="nav-item mb-4">
+        <a class="nav-link d-flex align-items-center" href="#">
+          <span class="material-icons me-3">
+            supervisor_account
+          </span>
+          Admin
+        </a>
+      </li>
+      <li class="nav-item mb-4">
+        <a class="nav-link d-flex align-items-center" href="#">
+          <span class="material-icons me-3">
+            settings
+          </span>
+          Settings
+        </a>
+      </li>
+    </ul>
+    <div class="user_id d-flex align-items-center ms-5">
+      <div class="flex-shrink-0">
+        <img class="user_photo rounded-circle"
+          src="https://images.unsplash.com/photo-1514794749374-fb67509dbb7f?ixlib=rb-1.2.1&ixid=eyjhchbfawqiojeymdd9&auto=format&fit=crop&w=2000&q=80"
+          alt="...">
       </div>
-    </nav>
+      <div class="user_info ms-3">
+        <p class="user_name fw-bold mb-0">Andy Chen</p>
+        <p class="user_email mb-0">andy0401@mail.com</p>
+      </div>
+    </div>
+  </nav>
+  <%- contents %>
 
-    <%- contents %>
-
-    <footer class="footer">
-      footer
-    </footer>
+    
 
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
-  </body>
+    <script>
+      ClassicEditor
+          .create( document.querySelector( '#editor' ) )
+          .catch( error => {
+              console.error( error );
+          } );
+  </script>
+</body>
 
 </html>
